tcw3/designer/tests/bad/prop_uninitable.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; }

    // `field` has no way to initialize
    prop field: u32 {}
}
